--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@mdi/js": "^7.0.96",
+    "@mertefecerit/vuetable": "^1.0.19",
     "@rushstack/eslint-patch": "^1.1.4",
     "axios": "^0.27.0",
     "chart.js": "^3.6.0",
     "numeral": "^2.0.6",
     "pinia": "^2.0.13",
+    "vee-validate": "^4.7.4",
     "vue": "^3.0.0",
+    "vue-country-flag-next": "^2.3.2",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
