--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-country-flag-next": "^2.3.2",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0",
+    "vue-tailwind-datepicker": "^1.4.3",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
