--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@vuelidate/validators": "^2.0.0",
     "axios": "^0.27.0",
     "chart.js": "^3.6.0",
+    "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "pinia": "^2.0.13",
     "vue": "^3.0.0",
     "vue-country-flag-next": "^2.3.2",
+    "vue-currency-input": "^3.0.4",
     "vue-i18n": "^9.2.2",
+    "vue-numeric": "^2.5.0",
     "vue-router": "^4.0.0",
     "vue-tailwind-datepicker": "^1.4.3",
     "vue-toastification": "^2.0.0-rc.5"
