--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-country-flag-next": "^2.3.2",
     "vue-currency-input": "^3.0.4",
     "vue-i18n": "^9.2.2",
+    "vue-modaltor": "^1.5.4",
     "vue-numeric": "^2.5.0",
     "vue-router": "^4.0.0",
     "vue-tailwind-datepicker": "^1.4.3",
