--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@mdi/js": "^7.0.96",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "axios": "^0.27.0",
     "chart.js": "^3.6.0",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "pinia": "^2.0.13",
@@ -24,8 +27,9 @@
     "vue-modaltor": "^1.5.4",
     "vue-numeric": "^2.5.0",
     "vue-router": "^4.0.0",
-    "vue-tailwind-datepicker": "^1.4.3",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-tailwind-datepicker": "^1.4.5",
+    "vue-toastification": "^2.0.0-rc.5",
+    "vue3-datepicker": "^0.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
