--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "@vuepic/vue-datepicker": "^5.4.0",
     "axios": "^0.27.0",
     "chart.js": "^3.6.0",
     "date-fns": "^2.30.0",
