--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^3.6.0",
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "numeral": "^2.0.6",
     "pinia": "^2.0.13",
     "vue": "^3.0.0",
