--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-numeric": "^2.5.0",
     "vue-router": "^4.0.0",
     "vue-tailwind-datepicker": "^1.4.5",
+    "vue-tippy": "^6.3.1",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0"
   },
