--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-tailwind-datepicker": "^1.4.5",
     "vue-tippy": "^6.3.1",
     "vue-toastification": "^2.0.0-rc.5",
-    "vue3-datepicker": "^0.4.0"
+    "vue3-datepicker": "^0.4.0",
+    "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
