--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.0",
     "chart.js": "^3.6.0",
     "date-fns": "^2.30.0",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "numeral": "^2.0.6",
