--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "axios": "^0.27.0",
     "chart.js": "^3.6.0",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "numeral": "^2.0.6",
     "pinia": "^2.0.13",
+    "sass": "^1.68.0",
     "vue": "^3.0.0",
     "vue-country-flag-next": "^2.3.2",
     "vue-currency-input": "^3.0.4",
@@ -34,6 +36,7 @@
     "vue-tippy": "^6.3.1",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
+    "vue3-html2pdf": "^1.1.2",
     "vue3-loading-overlay": "^0.0.0"
   },
   "devDependencies": {
