--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^3.6.0",
     "date-fns": "^2.30.0",
     "file-saver": "^2.0.5",
+    "i18n-iso-countries": "^7.7.0",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
